[project]
name = "sisc"
version = "0.1.0"
dependencies = [
    "PyGObject ~= 3.46",
    "soco ~= 0.30",
    "aiohttp ~= 3.9",
    "platformdirs ~= 4.2",
    "textual ~= 0.51",
]
scripts = { sisc = "sisc:main" }

[project.optional-dependencies]
dev = ["pre-commit"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
