[project]
name = "songbird"
version = "0.1.0"
dependencies = [
    "PyGObject ~= 3.46",
    "soco ~= 0.30",
    "aiohttp ~= 3.9",
    "platformdirs ~= 4.2",
    "textual ~= 0.51",
]
scripts = { songbird = "songbird:main" }

[project.optional-dependencies]
dev = [
  "pre-commit",
  "textual-dev",
]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
